kubernetes/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
       - name: api
         image: mariemmakni/repo1:fastapi
         ports:
         - containerPort: 8080
         #volumeMounts:
         #- name: my-storage
         #  mountPath: /static/images
      #volumes:
      #- name: my-storage
      #  persistentVolumeClaim:
      #    claimName: my-pvc
