kubernetes/app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: www.drivesure.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: api-service
            port:
              number: 8080
      - pathType: Prefix
        path: /
        backend:
          service:
            name: web-service
            port:
              number: 80
